--- a/css/style.css
+++ b/css/style.css
@@ -53,3 +53,11 @@ nav ul li a:hover{
     margin-top: -15%;
     
 }
+
+footer{
+    display: flex;
+    flex-direction: column;
+    margin-top: 18%;
+    justify-content: center;
+    align-items: center;
+}
