--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,13 @@
 *{
     margin: 0;
     padding: 0;
+    background: url(..//images/background.jpg.avif);
+    background-repeat: no-repeat;
 }
 main{
     width: 100%;
     height: 100vh;
-    background: url(..//images/background.jpg.avif);
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 nav{
@@ -46,18 +47,20 @@ nav ul li a:hover{
     gap: 20px;
 }
 
-.image{
-    position: absolute;
-    right: 0px;
-    width: 800px;
-    margin-top: -15%;
-    
-}
-
 footer{
     display: flex;
     flex-direction: column;
     margin-top: 18%;
     justify-content: center;
     align-items: center;
+    
 }
+
+.pic{
+    height: 300px;
+    width: 500px;
+    margin-left: 900px;
+    margin-top: -11%;
+    border-radius: 30px;
+}
+
